bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: value A
var order:String=A
                 ^BDR:3: error: not found: value getIndication
while (test) {order=getIndication()
                    ^BDR:4: error: not found: value R
             if (order=R) right()
                       ^BDR:4: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=R) right()
                      ^BDR:5: error: not found: value L
             if (order=L) left()
                       ^BDR:5: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=L) left()
                      ^BDR:6: error: not found: value A
             if (order=A) forward()
                       ^BDR:6: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=A) forward()
                      ^BDR:7: error: not found: value Z
             if (order=Z) backward()
                       ^BDR:7: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=Z) backward()
                      ^BDR:8: error: not found: value I
             if (order=I) {right(); right(); forward()}
                       ^BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=I) {right(); right(); forward()}
                      ^BDR:9: error: not found: value B
             if (order=B) {forward(); forward()}
                       ^BDR:9: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=B) {forward(); forward()}
                      ^BDR:10: error: not found: value C
             if (order=C) {forward(); forward(); forward()}
                       ^BDR:10: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=C) {forward(); forward(); forward()}
                      ^BDR:11: error: not found: value Y
             if (order=Y) {backward(); backward()}
                       ^BDR:11: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=Y) {backward(); backward()}
                      ^BDR:12: error: not found: value Z
             if (order=Z) {backward(); backward(); backward()}
                       ^BDR:12: error: type mismatch;
 found   : Unit
 required: Boolean
             if (order=Z) {backward(); backward(); backward()}
                      ^